# basisopt

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  codecov.yml  flake.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: branch.yaml  code-quality.yaml  publish.yaml  test.yaml
basisopt/: TODO.txt  __init__.py  api.py  bse_wrapper.py  containers.py  data.py  exceptions.py  molecule.py  optrecord.py  parallelise.py  util.py  version.py
basisopt/basis/: TODO.txt  __init__.py  atomic.py  basis.py  guesses.py  jkfit.py  molecular.py  zetatools.py
basisopt/opt/: TODO.txt  __init__.py  eventemper.py  legendre.py  optimizers.py  preconditioners.py  reduce.py  regularisers.py  strategies.py  welltemper.py
basisopt/testing/: TODO.txt  __init__.py  dunham.py  rank.py  test.py
basisopt/viz/: TODO.txt  basis.py  orbital.py
basisopt/wrappers/: TODO.txt  __init__.py  dummy.py  molpro.py  orca.py  psi4.py  wrapper.py
doc/: requirements.txt
doc/src/: conf.py  index.rst  installation.rst  introduction.rst  molpro.rst  tutorials.rst
examples/: README.md  default_strategy.py  ecp-energy.py  et_strategy.py  et_wt_compare.py  jkfit.py  legendre_strategy.py  li-v5z-jkfit.json  li-vqz-jkfit.json  li-vtz-jkfit.json  methanol.xyz  molecular.py  ne-reduce.py  oxygen.xyz  ranking.py  reduce_strategy.py  water.xyz  wt_strategy.py
examples/multi-molecule/: formaldehyde.xyz  methane.xyz  multi-molecule.py  multi_molecule.py  opt_basis.txt  water.xyz
examples/reduce/: ne_reduce.py  neon-reduce.json  viz_exponents.py
tests/: TODO.txt  __init__.py  et_test.py  test_api.py  test_basis.py  test_basis_guess.py  test_bse_wrapper.py  test_containers.py  test_molecule.py  test_parallelise.py  test_util.py  test_wrapper.py  test_zeta_tools.py
tests/data/: cl2.csv  (+3 more)
(+13 files in other folders)
